force-app/main/default/objects/Loan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual holding the loan</description>
    <label>Person Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a valid Person Account, Business Accounts are invalid for loans</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>You must select a valid Person Account, Business Accounts are invalid for loans</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>