force-app/main/default/objects/Loan__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(ISBLANK(Account__r.PersonContact.MailingStreet),&apos;&apos;, Account__r.PersonContact.MailingStreet + &apos; &apos;) +
IF(ISBLANK(Account__r.PersonContact.MailingCity),&apos;&apos;, Account__r.PersonContact.MailingCity + &apos; &apos;) + 
IF(ISBLANK(Account__r.PersonContact.MailingState),&apos;&apos;, Account__r.PersonContact.MailingState + &apos; &apos;) +
IF(ISBLANK(Account__r.PersonContact.MailingPostalCode),&apos;&apos;, Account__r.PersonContact.MailingPostalCode + &apos; &apos;) +
IF(ISBLANK(Account__r.PersonContact.MailingCountry),&apos;&apos;, Account__r.PersonContact.MailingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>